# lumen-xarray-lab

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
assets/sample_data/: curvilinear_rasm_demo.nc
assets/sample_data/multi_air_temperature/: air_temperature_part_01.nc  air_temperature_part_02.nc  air_temperature_part_03.nc
benchmarks/: flattening_vs_sql.py  large_grid_limits.py  multifile_loading.py  netcdf_vs_zarr.py  transform_timings.py
benchmarks/results/: flattening_vs_sql.json  large_grid_limits.json  multifile_loading.json  netcdf_vs_zarr.json  transform_timings.json
docs/: architecture.md  benchmarks.md  proposal-alignment.md  reviewer-guide.md  roadmap.md  upstream-plan.md
examples/: ai_upload_demo.py  air_temperature_demo.py  dashboard_app.py  quickstart.py  sql_explorer_demo.py
scripts/: download_demo_data.py  make_gif.py  make_screenshots.ps1  make_screenshots.py  run_dashboard.ps1  smoke_examples.ps1
src/lumen_xarray_lab/: __init__.py  ai_hooks.py  benchmark_utils.py  cf.py  datasets.py  schema_enrichment.py  sql_source.py  transforms.py
src/lumen_xarray_lab/dashboard/: __init__.py  app.py  explorer.py  export_flow.py  loaders.py  panes.py  plots.py  state.py  widgets.py
tests/: conftest.py  test_ai_hooks.py  test_ai_hooks_integration.py  test_benchmark_utils.py  test_cf.py  test_dashboard_smoke.py  test_datasets.py  test_examples_smoke.py  test_explorer_view.py  test_export_flow.py  test_schema_enrichment.py  test_sql_source.py  test_transforms.py
