[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumen-xarray-lab"
version = "0.1.0"
description = "Companion experiments, demos, and proposal assets for xarray support in Lumen"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Sanket Meghale" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Testing",
]
keywords = ["lumen", "xarray", "dashboard", "scientific-data", "prototype"]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "panel>=1.4",
  "xarray>=2024.1"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]
demo = [
  "cartopy",
  "geoviews",
  "holoviews",
  "hvplot",
  "imageio",
  "netcdf4",
  "playwright",
  "pooch"
]

[tool.hatch.build.targets.wheel]
packages = ["src/lumen_xarray_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
